feat: Add Docker and docker-compose setup for project

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   application:
     name: librarymanagement
   profiles:
-    active: local
+    active: dev
 
   # Spring Security - JWT configuration
   jwt:
